<resources>
    <string name="app_name" translatable="false">Sharkny</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>

    <string name="home">Home</string>
    <string name="finance">Finance</string>
    <string name="projects">Projects</string>
    <string name="other_services">OtherServices</string>

    <string name="home_button1">Deals\n1</string>
    <string name="home_button2">Current Projects\n4</string>
    <string name="home_button3">Franchise\n3</string>
    <string name="home_button4">Finance\n3</string>
    <string name="home_button5">My Account</string>
    <string name="home_button6">Other Services\n2</string>
    <string name="title_activity_my_account" translatable="false">MyAccountActivity</string>
    <string name="profile">My Account</string>
    <string name="advantages">Franchise</string>
    <string name="title_activity_account_profile" translatable="false">AccountProfileActivity</string>
    <string name="title_activity_account_finance" translatable="false">AccountFinanceActivity</string>
    <string name="title_activity_account_advanage" translatable="false">AccountAdvanageActivity</string>
    <string name="title_activity_account_project" translatable="false">AccountProjectActivity</string>
    <string name="title_activity_account_services" translatable="false">AccountServicesActivity</string>
    <string name="drawer_menu_login">SignIn</string>
    <string name="drawer_menu_register">Register</string>
    <string name="drawer_menu_about">About Sharkny</string>
    <string name="drawer_menu_contact_us">Contact us</string>
    <string name="drawer_authenticated_my_profile">Profile</string>
    <string name="drawer_authenticated_inbox">Inbox</string>
    <string name="drawer_authenticated_sent_mail">Sent Messages</string>
    <string name="drawer_authenticated_sign_out">Sign Out</string>
    <string name="drawer_authenticated_favorite">Favorites</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="stand_projects">Current Projects</string>
    <string name="new_ideas">New Ideas</string>
    <string name="Deals">Deals</string>
    <string name="company">Companies</string>
    <string name="personally">Personal</string>
    <string name="title_activity_login" translatable="false">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_advantage">Add Franchise</string>
    <string name="title_activity_add_finance">Add Finance</string>
    <string name="title_activity_add_serveice">Add Serveice</string>
    <string name="title_activity_add_project">Add Project</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_inbox" translatable="false">InboxActivity</string>
    <string name="title_activity_sent_mail" translatable="false">SentMailActivity</string>
    <string name="title_activity_message_detail">Message</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="search_about">Search About</string>
    <string name="select_profile_pic">Select Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="job">Job</string>
    <string name="age">Age</string>
    <string name="address">Title</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="safeguards">Grantuees</string>
    <string name="investment_value">Investment Value:</string>
    <string name="select_project_pic">Select Project Picture</string>
    <string name="select_service_pic">Select Service Picture</string>
    <string name="select_franchise_pic">Select Franchise Picture</string>
    <string name="select_finance_pic">Select Finance Picture</string>
    <string name="ratio_invest">Investment Percentage:</string>

    <string-array name="search1">
        <item>Section</item>
        <item>All</item>
        <item>Projects</item>
        <item>Finance</item>
        <item>Franchise</item>
        <item>Other Services</item>
    </string-array>

    <string-array name="search2">
        <item>Project Type</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>

    </string-array>

    <string-array name="search3">
        <item>Country</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <string-array name="search4">
        <item>Finance Type</item>
        <item>Personal</item>
        <item>Companies</item>
    </string-array>

    <string-array name="search5">
        <item>Franchise Type</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <string-array name="national">
        <item>National</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <!-- for add advantage -->
    <string-array name="add_advantage1">
        <item>Franchise Type</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="add_advantage2">
        <item>Franchise Field</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="add_advantage3">
        <item>Country That Live In</item>
        <item>Afghanistan</item>
    </string-array>

    <!-- for add project -->
    <string-array name="add_project1">
        <item>Start Date</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="add_project2">
        <item>End Date</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="add_project3">
        <item>Project Type</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="add_project4">
        <item>Project Field</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <!-- for add finance -->
    <string-array name="add_finance1">
        <item>Finance Type</item>
        <item>person</item>
        <item>community</item>
    </string-array>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="let_message">Sent Message</string>
    <string name="idea_owner">Idea Owner</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="project_field">Project Field:</string>
    <string name="project_type">Project Type:</string>
    <string name="guarantees">Guarantees:</string>
    <string name="country">Country:</string>
    <string name="title_activity_answer_messag" translatable="false">AnswerMessagActivity</string>
    <string name="title_activity_finance_detail" translatable="false">FinanceDetailActivity</string>
    <string name="title_activity_search_ressult_pfinan" translatable="false">SearchRessultPFinanActivity</string>
    <string name="title_activity_search_result_franchis" translatable="false">SearchResultFranchisActivity</string>
    <string name="title_activity_search_result_other_service" translatable="false">SearchResultOtherServiceActivity
    </string>
    <string name="search_result">Search Results</string>
    <string name="title_activity_comments" translatable="false">CommentsActivity</string>
    <string name="comments">Comments</string>
    <string name="comment">Enter your comment</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="add_comment">Add comment</string>
    <string name="address_register">Address</string>
    <string name="reply">Reply</string>
    <string name="nationality">Nationality</string>
    <string name="franchise_types">Franchise types</string>
    <string name="field">Field</string>
    <string name="Project_Type">Project Type</string>
    <string name="wait">wait...</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>


</resources>
