<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_lock"
            android:title="@string/drawer_menu_login" />
        <item
            android:id="@+id/register"
            android:icon="@drawable/register_ic"
            android:title="@string/drawer_menu_register" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about_ic"
            android:title="@string/drawer_menu_about" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact_ic"
            android:title="@string/drawer_menu_contact_us" />
    </group>

</menu>
