<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/button1"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="@string/home_button2"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/home_button1"
            android:textAllCaps="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textAllCaps="false"
            android:text="@string/home_button4"/>
        <Button
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/home_button3"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:text="@string/home_button6"/>
        <Button
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textAllCaps="false"
            android:text="@string/home_button5"/>

    </LinearLayout>

</LinearLayout>