<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">


            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/user_name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#000000"

                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>


            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/address"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="#FFFFFF"
                android:gravity="top"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:minHeight="150dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#000000"/>


            <Button
                android:id="@+id/button1"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:hint="@string/send"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
